@@ -134,7 +134,8 @@ html_short_title = "Distribute"
 #html_use_smartypants = True
 
 # Custom sidebar templates, maps document names to template names.
-#html_sidebars = {}
+html_sidebars = {'index': 'indexsidebar.html'}
+
 
 # Additional templates that should be rendered to pages, maps page names to
 # template names.
