@@ -9,6 +9,7 @@ CHANGES
 * Issue 90: unknown setuptools version can be added in the working set
 * Issue 87: setupt.py doesn't try to convert distribute_setup.py anymore
   Initial Patch by arfrever.
+* Issue 89: added a side bar with a download link to the doc.
 
 -----
 0.6.8
